# Environmental_BigData_Final

./: README.md  pyproject.toml
backend/: stac.py
benchmarks/: chunk_compute_5day_all_products_custom_strategies_median5.ipynb  task1_benchmark.py  task2_benchmark.py
catalog/: catalog.json
catalog/gaemi/: catalog.json
catalog/gaemi/gaemi-landcover/: collection.json
catalog/gaemi/gaemi-landcover/gaemi-landcover-gaemi-event-inventory-2024-ardswc-v7/: gaemi-landcover-gaemi-event-inventory-2024-ardswc-v7.json
catalog/gaemi/gaemi-qpesums-zarr/: collection.json
catalog/gaemi/gaemi-qpesums-zarr/gaemi-accum-rainfall/: gaemi-accum-rainfall.json
catalog/gaemi/gaemi-qpesums-zarr/gaemi-echotop-18/: gaemi-echotop-18.json
catalog/gaemi/gaemi-qpesums-zarr/gaemi-echotop-45/: gaemi-echotop-45.json
catalog/gaemi/gaemi-qpesums-zarr/gaemi-maxdbz/: gaemi-maxdbz.json
catalog/gaemi/gaemi-qpesums-zarr/gaemi-rain-rate/: gaemi-rain-rate.json
catalog/kong-rey/: catalog.json
catalog/kong-rey/kong-rey-landcover/: collection.json
catalog/kong-rey/kong-rey-qpesums-zarr/: collection.json
catalog/krathon/: catalog.json
catalog/krathon/krathon-landcover/: collection.json
catalog/krathon/krathon-qpesums-zarr/: collection.json
catalog/usagi/: catalog.json
catalog/usagi/usagi-landcover/: collection.json
catalog/usagi/usagi-qpesums-zarr/: collection.json
etl/: Typhoon_2024_accu_rain.py  convert_qpesums_to_zarr.py  export_event_zarrs.py  h5_to_zarr_with_derived_year.py
events/Usagi/landside_layers/: Usagi_event_inventory_2024_ardswc_v7.geojson
(+23 files in other folders)
